@@ -67,6 +67,8 @@
 
 	error in svycoxph with rescale=FALSE (Jing Zhang)
 
+	error in vcov.svyrep.design with mse=TRUE (shows up in svyVGAM)
+
 4.1-1	CRAN
 
 4.1	svyquantile() has been COMPLETELY REWRITTEN. The old version is available
